--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.0",
     "dayjs": "^1.11.13",
+    "flatpickr": "^4.6.13",
     "framer-motion": "^10.12.16",
     "lucide-react": "^0.525.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-flatpickr": "^4.0.11",
     "react-icons": "^5.5.0",
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.22.3",
