--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "flatpickr": "^4.6.13",
     "framer-motion": "^10.12.16",
     "lucide-react": "^0.525.0",
+    "multer": "^2.0.2",
     "quill": "^2.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
