--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-flatpickr": "^4.0.11",
+    "react-helmet-async": "^2.0.5",
     "react-icons": "^5.5.0",
     "react-phone-input-2": "^2.15.1",
     "react-quill": "^2.0.0",
