--- a/package.json
+++ b/package.json
@@ -6,15 +6,19 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@heroicons/react": "^2.2.0",
+    "@lottiefiles/dotlottie-react": "^0.15.1",
     "@mui/icons-material": "^7.2.0",
     "@mui/lab": "^7.0.0-beta.14",
     "@mui/material": "^7.2.0",
     "@mui/x-date-pickers": "^8.7.0",
+    "@radix-ui/react-slot": "^1.2.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
     "axios": "^1.6.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "flatpickr": "^4.6.13",
     "framer-motion": "^10.12.16",
@@ -34,6 +38,7 @@
     "react-toastify": "^11.0.5",
     "recharts": "^3.1.0",
     "slick-carousel": "^1.8.1",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.4.1"
   },
   "scripts": {
