--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
-  "homepage": "/",
+  "homepage": ".",
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
@@ -45,7 +45,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "build:prod": "REACT_APP_API_URL=https://bookyourride.in GENERATE_SOURCEMAP=false PUBLIC_URL=/ react-scripts build",
+    "build:prod": "REACT_APP_API_URL=https://bookyourride.in react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
