SEO fix for main home page

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "short_name": "BookYourRide",
-  "name": "BookYourRide - Best Bike Rental Service in Uttarakhand",
-  "description": "BookYourRide.in is a convenient online platform designed to simplify vehicle booking for local and outstation travel.",
+  "name": "BookYourRide - Book Your Taxi, Bike & Tour Packages",
+  "description": "Book taxis, bikes, and custom tour packages with transparent pricing, 24/7 support, and easy online booking at BookyourRide.com. Reserve now.",
   "icons": [
     {
       "src": "favicon.ico",
